--- a/registration.html
+++ b/registration.html
@@ -217,7 +217,7 @@
                         <a href="">Event</a>
                         <ul class="sub-menu">
                           <li>
-                            <a href="Accommodation.html">Accommodation</a>
+                            <a href="Accomodation.html">Accommodation</a>
                           </li>
                           <li><a href="sightseeing.html">Sightseeing</a></li>
                           <li>
@@ -549,12 +549,13 @@
         </div>
 
         <div class="">
-          <b>Cancellation Policy:</b> Registration refunds will be processed
-          only for email requests submitted before May 15th, 2025. · No refund
-          requests will be accepted after May 15th, 2025. · For cancellations
-          made before May 15th, a 25% processing fee will be deducted, and the
-          remaining amount will be refunded one month after the conference
-          concludes.
+          <b>Cancellation Policy:</b> <br />- Registration refunds will be
+          processed only for email requests submitted before May 15th, 2025.
+          <br />
+          - No refund requests will be accepted after May 15th, 2025. <br />
+          - For cancellations made before May 15th, a 25% processing fee will be
+          deducted, and the remaining amount will be refunded one month after
+          the conference concludes.
         </div>
       </div>
 
@@ -603,7 +604,7 @@
                   <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="td-footer-links">
                       <ul>
-                        <li><a href="Accommodation.html">Accommodation</a></li>
+                        <li><a href="Accomodation.html">Accommodation</a></li>
                         <li>
                           <a href="poster-presentation.html"
                             >Poster Presentation</a
