updated all pages

--- a/index.html
+++ b/index.html
@@ -304,8 +304,9 @@
                   data-wow-delay="0.3s"
                 >
                  APMEDUCON 2025 <br>
-KAUSALA VARDHANAM
+
                 </h2>
+                <h3 class="td-hero-kausala">KAUSALA VARDHANAM</h3>
                 <h2  class="text-light wow td-animetion-left td-hero-sub-title"
                   data-wow-duration="1.5s"
                   data-wow-delay="0.3s">Excellence Through Skills</h2>
@@ -1379,8 +1380,8 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                         <small>Moderator- Dr. K.Jithendra</small>
                     </td>
                     <td data-label="Speaker" class="speaker-col">
-                        Dr. Siva Prabodh,<br>
-                        Dr. Mahidhar Reddy,<br>
+                        Dr. V. Siva Prabodh,<br>
+                        Dr. V. Mahidhar Reddy,<br>
                         Dr. Jayaram Gadham,
                     </td>
                 </tr>
