--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                     <td data-label="Time" class="time-col">2.00 PM - 5.00 PM</td>
                     <td data-label="Topic" class="topic-col">
                         PCW2 Teaching undergraduates in the clinical rounds<br>
-                        <small>Facilitators: Dr. Lavanya Sanaboina, Dr. Vasundhara Arigela, Dr.Velpula Srilakshmi, Dr. Chintapatia Anusha Deepthi</small>
+                        <small>Facilitators: Dr. Lavanya Sanaboina, Dr. Vasundhara Arigela, Dr.Velpula Srilakshmi, Dr. Chintapatla Anusha Deepthi</small>
                     </td>
                     <td data-label="Speaker" class="speaker-col">Dr. Latha Ravichandran<br>Dr. Saravanan Sanniyasi</td>
                 </tr>
@@ -1194,20 +1194,20 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                     <td data-label="Venue"></td>
                     <td data-label="Time" class="time-col">09.00 AM - 09.40 AM</td>
                     <td data-label="Topic">Future of clinical teaching: Artificial intelligence and beyond</td>
-                    <td data-label="Speaker" class="speaker-col">Dr. Latha Ravichandran.</td>
+                    <td data-label="Speaker" class="speaker-col">Dr. Latha Ravichandran</td>
                    
                 </tr>
                 <tr>
                     <td data-label="Venue"></td>
                     <td data-label="Time" class="time-col">9.40 AM - 10.20 AM</td>
                     <td data-label="Topic">Digital Advances in Clinical Teaching</td>
-                 <td data-label="Speaker" class="speaker-col">Dr. Avinash Supe.</td>
+                 <td data-label="Speaker" class="speaker-col">Dr. Avinash Supe</td>
                 </tr>
                 <tr>
                     <td data-label="Venue"></td>
                     <td data-label="Time" class="time-col">10.20 AM - 11.00 AM</td>
                     <td data-label="Topic">Immersive Learning in the simulated environment</td>
-                    <td data-label="Speaker" class="speaker-col">Dr. Dinesh K Badyal.</td>
+                    <td data-label="Speaker" class="speaker-col">Dr. Dinesh K Badyal</td>
                 </tr>
                 <tr>
                     <td data-label="Venue"></td>
@@ -1224,21 +1224,21 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                 <tr class="highlight-row">
                     <td data-label="Venue">Keynote Address</td>
                     <td data-label="Time" class="time-col">11.40 AM - 12.15 PM</td>
-                    <td data-label="Topic">KAUSALA WADHANAM - EXCELLENCE THROUGH SKILLS</td>
-                    <td data-label="Speaker" class="speaker-col">Dr. Krishna G. Seshadri.</td>
+                    <td data-label="Topic">KAUSALA VARDHANAM - EXCELLENCE THROUGH SKILLS</td>
+                    <td data-label="Speaker" class="speaker-col">Dr. Krishna G. Seshadri</td>
                 </tr>
                 <tr>
                     <td data-label="Venue">Ensuring skill acquisition (Mini Auditorium)</td>
                     <td data-label="Time" class="time-col">12.15 PM - 01.00 PM</td>
                     <td data-label="Topic" class="topic-col">
-                        Panel discussion: Bridging the Gap Between Learning & Clinical Competence "Are We The All or Pregating Learners for Real-World Critical Practices?"<br>
-                        <small>Moderator: Dr. Venkata Veru Gopala Raju S</small>
+                        Panel discussion: Bridging the Gap Between Learning & Clinical Competence "Are We Truly Preparing Learners for Real-World Clinical Practices ?"<br>
+                        <small>Moderator: Dr. Venkata Venu Gopala Raju S</small>
                     </td>
                     <td data-label="Speaker" class="speaker-col">
                         Dr. Ch. Ravi Venkatachalam<br>
                         Dr. B. Devi Madhavi<br>
                         Dr. P.S.N. Raju<br>
-                        Dr. D.S Murthy.
+                        Dr. D.S Murthy
                     </td>
                 </tr>
                 <tr>
@@ -1251,13 +1251,13 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                     <td data-label="Venue">Assessment of skills - Requisite to graduate (Mini Auditorium)</td>
                     <td data-label="Time" class="time-col">02.00 PM - 02.40 PM</td>
                     <td data-label="Topic">Assessment in a simulated environment</td>
-                    <td data-label="Speaker" class="speaker-col">Dr. John Stephen.</td>
+                    <td data-label="Speaker" class="speaker-col">Dr. John Stephen</td>
                 </tr>
                 <tr>
                     <td data-label="Venue"></td>
                     <td data-label="Time" class="time-col">02.40 PM - 03.20 PM</td>
                     <td data-label="Topic">Designing cases for effective assessment in the Clinics</td>
-                    <td data-label="Speaker" class="speaker-col">Dr. Margaret Shanthi.</td>
+                    <td data-label="Speaker" class="speaker-col">Dr. Margaret Shanthi</td>
                 </tr>
                 <tr>
                     <td data-label="Venue"></td>
@@ -1269,10 +1269,10 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                     <td data-label="Venue"></td>
                     <td data-label="Time" class="time-col">03.30 PM - 04.30 PM</td>
                     <td data-label="Topic" class="topic-col">
-                        Debate- Standardization vs Personalization in Medical training: Should medical skill I/II and II assessment be Standardized for all or adapted to individual needs?<br>
+                        Debate- Standardization vs Personalization in Medical training Should medical skill teaching/learning and II assessment be Standardized for all or adapted to individual needs?<br>
                         <small>Moderator - Dr. Vinay Kumar Sayeli</small>
                     </td>
-                    <td data-label="Speaker" class="speaker-col">Dr. Saravanan Sanniyasi Vs <br> Dr. Sushant Mishra.</td>
+                    <td data-label="Speaker" class="speaker-col">Dr. Saravanan Sanniyasi <br> Vs <br> Dr. Sushant Mishra</td>
                 </tr>
                 <tr>
                     <td data-label="Venue">Will be Announced</td>
@@ -1283,12 +1283,12 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                 <tr>
                     <td data-label="Venue"></td>
                     <td data-label="Time" class="time-col">05.00 PM - 06.00 PM</td>
-                    <td data-label="Topic">General Body Meeting</td>
+                    <td data-label="Topic">APMEA General Body Meeting</td>
                     <td data-label="Speaker" class="speaker-col"></td>
                 </tr>
                 <tr class="highlight-row">
                     <td data-label="Venue"></td>
-                    <td data-label="Time" class="time-col">7.00 pm Onwards</td>
+                    <td data-label="Time" class="time-col">7.00 PM Onwards</td>
                     <td data-label="Topic">Gala Dinner and Cultural program</td>
                     <td data-label="Speaker" class="speaker-col"></td>
                 </tr>
@@ -1329,13 +1329,13 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                     <td data-label="Theme"></td>
                     <td data-label="Time" class="time-col">09.40 AM - 10.20 AM</td>
                     <td data-label="Topic" class="topic-col">
-                        Interdisciplinary Collaborations Working with Nurses, Therapists and Anti-Hesitful Professionals<br>
-                        <small>Moderator- Dr. K.Jithendra</small>
+                        Interdisciplinary collaborations working with nurses, therapists and allied healthcare professionals<br>
+                        <small>Moderator- Dr. K. Jithendra</small>
                     </td>
                     <td data-label="Speaker" class="speaker-col">
-                        Dr. V. Siva Prabodh,<br>
-                        Dr. V. Mahidhar Reddy,<br>
-                        Dr. Jayaram Gadham,
+                        Dr. V. Siva Prabodh<br>
+                        Dr. V. Mahidhar Reddy<br>
+                        Dr. Jayaram Gadham
                     </td>
                 </tr>
                 <tr>
@@ -1359,9 +1359,9 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                     </td>
                     <td data-label="Speaker" class="speaker-col">
                         Dr. A.S. Kireeti,<br>
-                        Dr. Swathi Poorninma Madala<br>
-                        Dr. P.J. Srinivas,<br>
-                        Dr. D. Lakshmi Lalitha,
+                        Dr. Swathi Poornima Madala<br>
+                        Dr. P.J. Srinivas<br>
+                        Dr. D. Lakshmi Lalitha
                     </td>
                 </tr>
                 <tr>
@@ -1385,7 +1385,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                 <tr class="highlight-row">
                     <td data-label="Theme"></td>
                     <td data-label="Time" class="time-col">02.00 PM - 03.00 PM</td>
-                    <td data-label="Topic">Valedictory and Vote of thanks</td>
+                    <td data-label="Topic">Valedictory and Vote of Thanks</td>
                     <td data-label="Speaker" class="speaker-col"></td>
                 </tr>
                 <tr>
@@ -1779,8 +1779,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                       <ul>
                         
                         <li><a href="Accomodation.html">Accommodation</a></li>
-                        <li><a href="poster-presentation.html">Poster Presentation</a></li>
-                        <li><a href="paper-publication.html">Paper Presentations</a></li>
+                        <li><a href="poster-presentation.html">Scientific Presentation</a></li>
                         <li><a href="register.html">Register</a></li>
                                <li><a href="contact.html">Contact</a></li>
                       </ul>
@@ -1818,7 +1817,7 @@ Ensuring the acquisition of essential skills in medical students is crucial for 
                 <div class="row align-items-center">
                   <div class="col-md-5">
                     <div class="td-footer-bottom-copyright mb-30">
-                      <p>Copyright © 2025 apmeducon All rights reserved.</p>
+                      <p>Copyright © ASRAM, Eluru All rights reserved </p>
                     </div>
                   </div>
                   <div class="col-md-6">
